monitor/pushgateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pushgateway

spec:
  replicas: 1
  selector:
    matchLabels:
      app: pushgateway
  template:
    metadata:
      labels:
        app: pushgateway
    spec:
      containers:
        - name: pushgateway
          image: pushgateway
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9091
          livenessProbe:
            httpGet:
              path: /-/ready
              port: 9091
            initialDelaySeconds: 10
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /-/ready
              port: 9091
            initialDelaySeconds: 10
            timeoutSeconds: 10
