monitor/pushgateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pushgateway
  annotations:
    prometheus.io/probe: pushgateway

spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      name: http
  selector:
    app: pushgateway
